tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Current_Health_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Current_Health_Concerns__c</fullName>
    <inlineHelpText>Current health concerns, conditions, or symptoms the participant wants to address.</inlineHelpText>
    <label>Current Health Concerns</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>