tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Current_Legal_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Legal_Status__c</fullName>
    <inlineHelpText>Current legal status including pending cases, probation, or parole.</inlineHelpText>
    <label>Current Legal Status</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>