tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Current_Living_Situation__c.field-meta.xml
<CustomField>
    <fullName>Current_Living_Situation__c</fullName>
    <inlineHelpText>Description of client&apos;s current living situation and stability.</inlineHelpText>
    <label>Current Living Situation</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>