tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Current_Physical_Medications__c.field-meta.xml
<CustomField>
    <fullName>Current_Physical_Medications__c</fullName>
    <inlineHelpText>Current medications for physical health conditions.</inlineHelpText>
    <label>Current Physical Medications</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>