tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Current_Psychiatric_Medications__c.field-meta.xml
<CustomField>
    <fullName>Current_Psychiatric_Medications__c</fullName>
    <inlineHelpText>Current psychiatric medications being taken, including dosage if known.</inlineHelpText>
    <label>Current Psychiatric Medications</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>