tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Current_Substance_Use__c.field-meta.xml
<CustomField>
    <fullName>Current_Substance_Use__c</fullName>
    <inlineHelpText>Current substance use (types of substances).</inlineHelpText>
    <label>Current Substance Use</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>