tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Currently_Fleeing_DV__c.field-meta.xml
<CustomField>
    <fullName>Currently_Fleeing_DV__c</fullName>
    <inlineHelpText>Is this person currently fleeing domestic violence?</inlineHelpText>
    <label>Currently Fleeing DV</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Client Doesn&apos;t Know</fullName>
            </value>
            <value>
                <fullName>Prefers Not to Answer</fullName>
            </value>
            <value>
                <fullName>Data Not Collected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>