tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Currently_in_School__c.field-meta.xml
<CustomField>
    <fullName>Currently_in_School__c</fullName>
    <inlineHelpText>Is this person currently enrolled in school?</inlineHelpText>
    <label>Currently in School</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Client doesn&apos;t know</fullName>
            </value>
            <value>
                <fullName>Client refused</fullName>
            </value>
            <value>
                <fullName>Data Not Collected</fullName>
                <isActive>false</isActive>
                <label>Data Not Collected</label>
            </value>
            <value>
                <fullName>Prefers Not to Answer</fullName>
                <isActive>false</isActive>
                <label>Prefers Not to Answer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>