tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Daily_Functioning__c.field-meta.xml
<CustomField>
    <fullName>Daily_Functioning__c</fullName>
    <inlineHelpText>How do symptoms affect daily functioning? Impact on work, relationships, self-care.</inlineHelpText>
    <label>Daily Functioning</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>