tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Danger_Resulting_in_Death__c.field-meta.xml
<CustomField>
    <fullName>Danger_Resulting_in_Death__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Have you done anything dangerous where you could have died?</inlineHelpText>
    <label>Danger Resulting in Death</label>
    <type>Checkbox</type>
</CustomField>