tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Danger_Resulting_in_Death_Description__c.field-meta.xml
<CustomField>
    <fullName>Danger_Resulting_in_Death_Description__c</fullName>
    <label>Danger Resulting in Death Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>