tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Dental_Needs__c.field-meta.xml
<CustomField>
    <fullName>Dental_Needs__c</fullName>
    <inlineHelpText>Dental health needs and concerns.</inlineHelpText>
    <label>Dental Needs</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>