tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Deterrents_from_Acting__c.field-meta.xml
<CustomField>
    <fullName>Deterrents_from_Acting__c</fullName>
    <inlineHelpText>Are there things - anyone or anything (e.g., family, religion, pain of death) - that stopped you from wanting to die or acting on thoughts of suicide?</inlineHelpText>
    <label>Deterrents from Acting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Deterrents</valueSetName>
    </valueSet>
</CustomField>