tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Dissociation_Scale_1__c.field-meta.xml
<CustomField>
    <fullName>Dissociation_Scale_1__c</fullName>
    <inlineHelpText>Dissociation screening: I find myself staring off into space. (0=Always, 10=Never)</inlineHelpText>
    <label>Dissociation Scale 1</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>