tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Dissociation_Scale_3__c.field-meta.xml
<CustomField>
    <fullName>Dissociation_Scale_3__c</fullName>
    <inlineHelpText>Dissociation screening: I can&apos;t tell whether I am remembering or if it is happening. (0=Always, 10=Never)</inlineHelpText>
    <label>Dissociation Scale 3</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>