tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Documentation_Consent__c.field-meta.xml
<CustomField>
    <fullName>Documentation_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Documentation Consent</label>
    <type>Checkbox</type>
</CustomField>