tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Documentation_Offered__c.field-meta.xml
<CustomField>
    <fullName>Documentation_Offered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Documentation Offered</label>
    <type>Checkbox</type>
</CustomField>