tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/DSM_Diagnosis_Primary__c.field-meta.xml
<CustomField>
    <fullName>DSM_Diagnosis_Primary__c</fullName>
    <inlineHelpText>Primary DSM diagnosis.</inlineHelpText>
    <label>DSM Diagnosis - Primary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>