tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/DSM_Diagnosis_Secondary__c.field-meta.xml
<CustomField>
    <fullName>DSM_Diagnosis_Secondary__c</fullName>
    <inlineHelpText>Secondary DSM diagnoses.</inlineHelpText>
    <label>DSM Diagnosis - Secondary</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>