tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Duration_of_Thoughts__c.field-meta.xml
<CustomField>
    <fullName>Duration_of_Thoughts__c</fullName>
    <inlineHelpText>When you have the thoughts how long do they last?</inlineHelpText>
    <label>Duration of Thoughts</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Duration</valueSetName>
    </valueSet>
</CustomField>