tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/DV_Experience__c.field-meta.xml
<CustomField>
    <fullName>DV_Experience__c</fullName>
    <inlineHelpText>Has this person experienced domestic violence, dating violence, sexual assault, or stalking?</inlineHelpText>
    <label>DV Experience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Client Doesn&apos;t Know</fullName>
            </value>
            <value>
                <fullName>Client Does Not Know</fullName>
            </value>
            <value>
                <fullName>Prefers Not to Answer</fullName>
            </value>
            <value>
                <fullName>Data Not Collected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>