tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/DV_How_Long_Ago__c.field-meta.xml
<CustomField>
    <fullName>DV_How_Long_Ago__c</fullName>
    <inlineHelpText>When did the domestic violence occur?</inlineHelpText>
    <label>DV How Long Ago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Within the past 3 months</fullName>
            </value>
            <value>
                <fullName>3 to 6 months ago</fullName>
            </value>
            <value>
                <fullName>6 months to 1 year ago</fullName>
            </value>
            <value>
                <fullName>More than 1 year ago</fullName>
            </value>
            <value>
                <fullName>Client Doesn&apos;t Know</fullName>
            </value>
            <value>
                <fullName>Prefers Not to Answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>