tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/DV_Safety_Concerns__c.field-meta.xml
<CustomField>
    <fullName>DV_Safety_Concerns__c</fullName>
    <inlineHelpText>Notes about current domestic violence safety concerns or needs.</inlineHelpText>
    <label>DV Safety Concerns</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>