tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Education_Level__c.field-meta.xml
<CustomField>
    <fullName>Education_Level__c</fullName>
    <inlineHelpText>Highest level of education completed.</inlineHelpText>
    <label>Education Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Less than high school</fullName>
            </value>
            <value>
                <fullName>Some high school</fullName>
            </value>
            <value>
                <fullName>High school diploma/GED</fullName>
            </value>
            <value>
                <fullName>Some college</fullName>
            </value>
            <value>
                <fullName>Associate degree</fullName>
            </value>
            <value>
                <fullName>Bachelor&apos;s degree</fullName>
            </value>
            <value>
                <fullName>Graduate degree</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>