tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Employer_Name__c.field-meta.xml
<CustomField>
    <fullName>Employer_Name__c</fullName>
    <inlineHelpText>Name of employer (if employed).</inlineHelpText>
    <label>Employer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>