tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Employment_Barriers__c.field-meta.xml
<CustomField>
    <fullName>Employment_Barriers__c</fullName>
    <inlineHelpText>Barriers to employment (e.g., lack of transportation, criminal record, childcare needs).</inlineHelpText>
    <label>Employment Barriers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>