tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Employment_Goals__c.field-meta.xml
<CustomField>
    <fullName>Employment_Goals__c</fullName>
    <inlineHelpText>Employment goals and desired career path.</inlineHelpText>
    <label>Employment Goals</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>