tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Employment_Status__c.field-meta.xml
<CustomField>
    <fullName>Employment_Status__c</fullName>
    <inlineHelpText>Current employment status.</inlineHelpText>
    <label>Employment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employed Full-Time</fullName>
            </value>
            <value>
                <fullName>Employed Part-Time</fullName>
            </value>
            <value>
                <fullName>Self-Employed</fullName>
            </value>
            <value>
                <fullName>Gig Economy/Contract Work</fullName>
            </value>
            <value>
                <fullName>Unemployed - Seeking Work</fullName>
            </value>
            <value>
                <fullName>Unemployed - Not Seeking Work</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Disabled - Unable to Work</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Client Doesn&apos;t Know</fullName>
                <isActive>false</isActive>
                <label>Client Doesn&apos;t Know</label>
            </value>
            <value>
                <fullName>Data Not Collected</fullName>
                <isActive>false</isActive>
                <label>Data Not Collected</label>
            </value>
            <value>
                <fullName>Full-time (35+ hours/week)</fullName>
                <isActive>false</isActive>
                <label>Full-time (35+ hours/week)</label>
            </value>
            <value>
                <fullName>Not in Labor Force</fullName>
                <isActive>false</isActive>
                <label>Not in Labor Force</label>
            </value>
            <value>
                <fullName>Part-time (less than 35 hours/week)</fullName>
                <isActive>false</isActive>
                <label>Part-time (less than 35 hours/week)</label>
            </value>
            <value>
                <fullName>Prefers Not to Answer</fullName>
                <isActive>false</isActive>
                <label>Prefers Not to Answer</label>
            </value>
            <value>
                <fullName>Seasonal/Sporadic</fullName>
                <isActive>false</isActive>
                <label>Seasonal/Sporadic</label>
            </value>
            <value>
                <fullName>Seeking Employment</fullName>
                <isActive>false</isActive>
                <label>Seeking Employment</label>
            </value>
            <value>
                <fullName>Unable to Work</fullName>
                <isActive>false</isActive>
                <label>Unable to Work</label>
            </value>
            <value>
                <fullName>Unemployed</fullName>
                <isActive>false</isActive>
                <label>Unemployed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>