tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Employment_Type__c.field-meta.xml
<CustomField>
    <fullName>Employment_Type__c</fullName>
    <inlineHelpText>Type of employment (if employed).</inlineHelpText>
    <label>Employment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>W-2 Employee</fullName>
            </value>
            <value>
                <fullName>1099 Contractor</fullName>
            </value>
            <value>
                <fullName>Gig Economy</fullName>
            </value>
            <value>
                <fullName>Day Labor</fullName>
            </value>
            <value>
                <fullName>Cash/Under Table</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>1099 Contractor/Self-Employed</fullName>
                <isActive>false</isActive>
                <label>1099 Contractor/Self-Employed</label>
            </value>
            <value>
                <fullName>Gig Economy (Uber, DoorDash, etc.)</fullName>
                <isActive>false</isActive>
                <label>Gig Economy (Uber, DoorDash, etc.)</label>
            </value>
            <value>
                <fullName>Under the Table/Cash</fullName>
                <isActive>false</isActive>
                <label>Under the Table/Cash</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>