tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Eviction_History__c.field-meta.xml
<CustomField>
    <fullName>Eviction_History__c</fullName>
    <inlineHelpText>Has this person ever been evicted?</inlineHelpText>
    <label>Eviction History</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Client Doesn&apos;t Know</fullName>
            </value>
            <value>
                <fullName>Prefers Not to Answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>