tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Family_Background__c.field-meta.xml
<CustomField>
    <fullName>Family_Background__c</fullName>
    <inlineHelpText>Family history, relationships, and dynamics.</inlineHelpText>
    <label>Family Background</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>