tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Family_Mental_Health_History__c.field-meta.xml
<CustomField>
    <fullName>Family_Mental_Health_History__c</fullName>
    <inlineHelpText>Family history of mental health conditions or diagnoses.</inlineHelpText>
    <label>Family Mental Health History</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>