tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Family_Substance_Use_History__c.field-meta.xml
<CustomField>
    <fullName>Family_Substance_Use_History__c</fullName>
    <inlineHelpText>Family history of substance use or addiction.</inlineHelpText>
    <label>Family Substance Use History</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>