tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/First_Attempt_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Attempt_Date__c</fullName>
    <label>First Attempt Date</label>
    <type>Date</type>
</CustomField>