tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/First_Attempt_Lethality__c.field-meta.xml
<CustomField>
    <fullName>First_Attempt_Lethality__c</fullName>
    <label>First Attempt Lethality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>On_a_Scale_of_One_to_Five</valueSetName>
    </valueSet>
</CustomField>