tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/First_Attempt_Potential_Lethality__c.field-meta.xml
<CustomField>
    <fullName>First_Attempt_Potential_Lethality__c</fullName>
    <label>First Attempt Potential Lethality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Potential_Lethality</valueSetName>
    </valueSet>
</CustomField>