tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Foster_Care_Duration__c.field-meta.xml
<CustomField>
    <fullName>Foster_Care_Duration__c</fullName>
    <inlineHelpText>How long was this person in foster care? (e.g., &quot;2 years&quot;, &quot;6 months to 1 year&quot;)</inlineHelpText>
    <label>Foster Care Duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Less than one year</fullName>
            </value>
            <value>
                <fullName>1-3 years</fullName>
            </value>
            <value>
                <fullName>3-5+ years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>