tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Foster_Care_Location__c.field-meta.xml
<CustomField>
    <fullName>Foster_Care_Location__c</fullName>
    <inlineHelpText>Where was the foster care placement? (City, State)</inlineHelpText>
    <label>Foster Care Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>