tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Free_Time_Activities__c.field-meta.xml
<CustomField>
    <fullName>Free_Time_Activities__c</fullName>
    <inlineHelpText>What do you do in your free time? What are your hobbies and interests?</inlineHelpText>
    <label>Free Time Activities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>