tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <inlineHelpText>How many times have you had these thoughts?</inlineHelpText>
    <label>Frequency of Thoughts</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Frequency</valueSetName>
    </valueSet>
</CustomField>