tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Health_Care_Provider__c.field-meta.xml
<CustomField>
    <fullName>Health_Care_Provider__c</fullName>
    <inlineHelpText>Primary health care provider name and contact information.</inlineHelpText>
    <label>Health Care Provider</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>