tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Health_Goals__c.field-meta.xml
<CustomField>
    <fullName>Health_Goals__c</fullName>
    <inlineHelpText>Physical and mental health goals.</inlineHelpText>
    <label>Health Goals</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>