tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Health_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Health_Insurance__c</fullName>
    <inlineHelpText>Select all health insurance types that apply.</inlineHelpText>
    <label>Health Insurance</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medicaid</fullName>
            </value>
            <value>
                <fullName>Medicare</fullName>
            </value>
            <value>
                <fullName>VA Medical</fullName>
            </value>
            <value>
                <fullName>Private Insurance</fullName>
            </value>
            <value>
                <fullName>No Insurance</fullName>
            </value>
            <value>
                <fullName>Client doesn&apos;t know</fullName>
            </value>
            <value>
                <fullName>Client refused</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>