tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Health_Insurance_Data_Not_Collected__c.field-meta.xml
<CustomField>
    <fullName>Health_Insurance_Data_Not_Collected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Not Collected</label>
    <type>Checkbox</type>
</CustomField>