tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Health_Insurance_Medicaid__c.field-meta.xml
<CustomField>
    <fullName>Health_Insurance_Medicaid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Medicaid</label>
    <type>Checkbox</type>
</CustomField>