tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Health_Insurance_Medicare__c.field-meta.xml
<CustomField>
    <fullName>Health_Insurance_Medicare__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Medicare</label>
    <type>Checkbox</type>
</CustomField>