tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Health_Insurance_No_Health_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Health_Insurance_No_Health_Insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Health Insurance</label>
    <type>Checkbox</type>
</CustomField>