tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/HI_Client_Doesnt_Know__c.field-meta.xml
<CustomField>
    <fullName>HI_Client_Doesnt_Know__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Doesn&apos;t Know</label>
    <type>Checkbox</type>
</CustomField>