tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/HI_Client_Prefers_Not_to_Answer__c.field-meta.xml
<CustomField>
    <fullName>HI_Client_Prefers_Not_to_Answer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Prefers Not to Answer</label>
    <type>Checkbox</type>
</CustomField>