tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/HI_COBRA__c.field-meta.xml
<CustomField>
    <fullName>HI_COBRA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HI COBRA</label>
    <type>Checkbox</type>
</CustomField>