tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/HI_Employer_Provided__c.field-meta.xml
<CustomField>
    <fullName>HI_Employer_Provided__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HI Employer Provided</label>
    <type>Checkbox</type>
</CustomField>