tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/HI_Indian_Health_Services_Program__c.field-meta.xml
<CustomField>
    <fullName>HI_Indian_Health_Services_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indian Health Services Program</label>
    <type>Checkbox</type>
</CustomField>