tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/HI_Private_Pay_Health_Insurance__c.field-meta.xml
<CustomField>
    <fullName>HI_Private_Pay_Health_Insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Private Pay Health Insurance</label>
    <type>Checkbox</type>
</CustomField>