tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/HI_State_Childrens_Health_Insurance__c.field-meta.xml
<CustomField>
    <fullName>HI_State_Childrens_Health_Insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>State Children&apos;s Health Insurance</label>
    <type>Checkbox</type>
</CustomField>