tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/HI_State_Health_Insurance_for_Adults__c.field-meta.xml
<CustomField>
    <fullName>HI_State_Health_Insurance_for_Adults__c</fullName>
    <defaultValue>false</defaultValue>
    <label>State Health Insurance for Adults</label>
    <type>Checkbox</type>
</CustomField>