tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/HI_VA_Medical_Services__c.field-meta.xml
<CustomField>
    <fullName>HI_VA_Medical_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HI VA Medical Services</label>
    <type>Checkbox</type>
</CustomField>